correcttion suite soutenance à l'inversion de l'animation coeur ,reprise des marges et alignement des titres menu

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -298,7 +298,7 @@ $input-place-holder:"roboto";
 	position: relative;
   }
   
-  .position-fonctionnement {
+.position-fonctionnement{
 	display: flex;
 	flex-wrap: wrap;
   }
@@ -481,19 +481,21 @@ $input-place-holder:"roboto";
 
   }
   
-  .fa-solid__opacity {
-	opacity: 0;
-  
-	&:hover {
-	  opacity: 1;
-	  color: transparent;
-	  background-clip: text;
-	  -webkit-background-clip: text;
-	  transition: all 0.4s ease-in-out;
-	  background-image: linear-gradient(to bottom,$background-linear-gradient-color_1 , $background-linear-gradient-color_2);
-	}
-  }
-  
+.fa-solid__opacity {
+    opacity: 0;
+    transition: all 0.4s ease-in-out;
+
+    background-clip: text;
+    -webkit-background-clip: text;
+    background-image: linear-gradient(to bottom, $background-linear-gradient-color_2, $background-linear-gradient-color_1); 
+
+    &:hover {
+        opacity: 1;
+        color: transparent;
+        background-image: linear-gradient(to bottom, $background-linear-gradient-color_1, $background-linear-gradient-color_2); 
+    }
+}
+
 
   /* ************************************************** */
   
@@ -510,13 +512,17 @@ $input-place-holder:"roboto";
 	border-bottom: 3px $badge-color_7 solid;
 	width: 40px;
   }
-  
+  .menu-full h2{
+		
+	margin-left: 20px;
+}
   /* debut carte menu */
   
   .menu-full {
 	display: grid;
 	grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
+	margin-top: 30px;
+}
   
   .menu-listing {
 	display: flex;
@@ -743,22 +749,30 @@ $input-place-holder:"roboto";
 	  padding: 2rem;
 	  margin: -16rem auto 0 auto;
 	}
-  
+	.position-fonctionnement h2{
+		margin-left: 100px;
+	}
 	.list-element {
 	  display: grid;
 	  grid-template-columns: repeat(auto-fit, minmax(322px, 1fr));
-	  margin: 0 100px;
+	  margin: 0px 100px ;
 	}
-  
+  .home-section{
+	padding: 32px;
+  }
 	.list-full {
 	  padding: 20px;
+	 
 	}
-  
+	.section-title{
+		margin-left: 100px;
+	}
+	
 	.list-element-restaurant {
 	  display: grid;
 	  grid-template-columns: repeat(2, minmax(0, 1fr));
 	  margin: 0 auto;
-	  width: 80%;
+	  width: 85%;
 	  grid-gap: 30px;
 	}
   
