--- a/styles/style.css
+++ b/styles/style.css
@@ -399,13 +399,14 @@ main {
 
 .fa-solid__opacity {
   opacity: 0;
+  transition: all 0.4s ease-in-out;
+  background-clip: text;
+  -webkit-background-clip: text;
+  background-image: linear-gradient(to bottom, #9356dc, #ff79da);
 }
 .fa-solid__opacity:hover {
   opacity: 1;
   color: transparent;
-  background-clip: text;
-  -webkit-background-clip: text;
-  transition: all 0.4s ease-in-out;
   background-image: linear-gradient(to bottom, #ff79da, #9356dc);
 }
 
@@ -424,10 +425,15 @@ main {
   width: 40px;
 }
 
+.menu-full h2 {
+  margin-left: 20px;
+}
+
 /* debut carte menu */
 .menu-full {
   display: grid;
   grid-template-columns: repeat(1, minmax(0, 1fr));
+  margin-top: 30px;
 }
 
 .menu-listing {
@@ -629,19 +635,28 @@ footer .footer-icon-hand {
     padding: 2rem;
     margin: -16rem auto 0 auto;
   }
+  .position-fonctionnement h2 {
+    margin-left: 100px;
+  }
   .list-element {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(322px, 1fr));
-    margin: 0 100px;
+    margin: 0px 100px;
+  }
+  .home-section {
+    padding: 32px;
   }
   .list-full {
     padding: 20px;
+  }
+  .section-title {
+    margin-left: 100px;
   }
   .list-element-restaurant {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     margin: 0 auto;
-    width: 80%;
+    width: 85%;
     grid-gap: 30px;
   }
   .list-element h3 {
